WHO-4 gitignore + Auth changes + initial schema